css/style.css
:root {
  --main-bg: #262426;
  --main-fg: #fff2ff;
}

body {
  margin: 0;
  background-color: var(--main-bg);
  color: var(--main-fg);
}

div#wrapper {
  min-height: 100vh;

  display: grid;

  .empty {
    visibility: hidden;
  }

  div#button-justifier {
  }

  header {
    grid-area: hd;
    background-color: salmon;

    display: flex;

    justify-content: space-between;
    align-items: center;
    padding: 5px;
  }

  nav#topnav {
    display: flex;
    justify-content: space-between;

    --item-side-padding: 2em;

    a {
      display: block;
      padding-left: var(--item-side-padding);
      padding-right: var(--item-side-padding);
    }
  }

  button {
    padding: 0;
    color: var(--main-fg);
    aspect-ratio: 1;
    /* border-style: none; */
  }

  i.material-icons {
    padding: 5px;
  }

  div.nav-wrapper {
    position: relative;

    --transition-time: 0.3s;
    --transition-kind: ease;

    nav.togglable {

      width: 100%;
      max-width: 80vw;
      overflow: hidden;
      visibility: hidden;
      grid-area: nv;
      background-color: blueviolet;

      transform: translateX(-100%);
    }

    div.fade-layer {
      display: none;
      background-color: rgba(0, 0, 0, 0.6);
      position: fixed;
      top: 0;
      bottom: 0;
      left: 0;
      right: 0;
    }

    nav.togglable.with-transitions {
      transition: transform var(--transition-time) var(--transition-kind), visibility var(--transition-time) var(--transition-kind);
    }

    nav.togglable.show {
      transform: translateX(0);
      visibility: visible;
    }

    button.nav-button.side-button {
      --button-width: 38px;
      --button-height: var(--button-width);

      position: absolute;
      top: calc(50% - calc(var(--button-height) / 2));
      /* top: calc(100% - var(--button-height)); */

      right: calc(100% - var(--button-width));
    }

    button.nav-button.side-button.with-transitions {
      transition: right var(--transition-time) var(--transition-kind);
    }

    button.nav-button.side-button.is-left {
      transform: scaleX(-1);
      right: 0;
      /* right: calc(100% - var(--button-width)); */
    }
  }

  main {
    grid-area: mn;
    background-color: pink;
  }

  aside {
    grid-area: as;
    display: none;
    background-color: greenyellow;
  }

  footer {
    grid-area: ft;
    background-color: aquamarine;
  }
}

@media screen and (max-width: 999px) {
  div#wrapper {
    grid-template-rows: auto 1fr auto;
    grid-template-columns: 1fr;

    grid-template-areas: "hd"
      "mn"
      "ft";

    nav#topnav {
      h1 {
        font-size: 1em;
      }
    }

    div.nav-wrapper {

      div.fade-layer.show {
        display: block;
      }

      nav.togglable {
        width: 80vw;
        position: fixed;
        left: 0;
        top: 0;
        bottom: 0;
      }

      button.nav-button.side-button {
        display: none;
      }
    }
  }
}

@media screen and (min-width: 1000px) {
  div#wrapper {
    grid-template-columns: minmax(17em, 1fr) minmax(0, 120ch) minmax(17em, 1fr);
    grid-template-rows: auto 1fr auto;

    button.nav-button.header-button {
      visibility: hidden;
    }

    nav.togglable {
      height: 100%;
    }

    grid-template-areas: "hd hd hd"
    "nv mn as"
    "ft ft ft";

    aside {
      display: block;
    }
  }
}

